--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests --noStackTrace --runInBand",
+    "test:verbose": "jest --passWithNoTests --runInBand",
+    "test:unit": "npm test -- --watch -c jest.unit.config.js",
+    "test:integration": "npm test -- --watch -c jest.integration.config.js",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage",
+    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -17,6 +23,14 @@
     "multer": "^1.4.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@shelf/jest-mongodb": "^2.2.1",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "4.4.1"
+    }
   }
 }
