--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,11 @@
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^2.2.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.2"
